fixed a bit the products.json

--- a/pplatform/templates/base.html
+++ b/pplatform/templates/base.html
@@ -50,7 +50,7 @@
             aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'home' %}">Building Materials</a>
+          <a class="navbar-brand" href="{% url 'home' %}">Products Platform</a>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
@@ -124,7 +124,7 @@
       {% endif %}
 
       {% block content %}
-      <p>Use this document as a way to quick start any new project.</p>
+      <p>This Platform allow you to compare Products with all the details and technical aspects.</p>
       {% endblock content %}
 
       <br><br><br>
