--- a/pplatform/templates/pagination.html
+++ b/pplatform/templates/pagination.html
@@ -1,5 +1,5 @@
 {% if queryset.has_other_pages %}
-<nav aria-label="Page navigation example">
+<nav aria-label="Page navigation general">
   <ul class="pagination justify-content-center">
 
     {% if queryset.has_previous %}
@@ -7,7 +7,7 @@
         data-page="{{queryset.previous_page_number}}">&#10094; Prev</a></li>
     {% else %}
     <li class="page-item disabled">
-      <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+      <a class="page-link" href="#" tabindex="-1" aria-disabled="true">&#10094; Prev</a>
     </li>
     {% endif %}
 
@@ -24,8 +24,11 @@
     {% endfor %}
 
     {% if queryset.has_next %}
-    <li><a href="?page={{queryset.next_page_number}}" class="page-link"
+    <li class="page-item"><a href="?page={{queryset.next_page_number}}" class="page-link"
         data-page="{{queryset.next_page_number}}">Next &#10095;</a></li>
+    {% else %}
+    <li class="page-item disabled"><a href="#" class="page-link"
+        aria-disabled="true"">Next &#10095;</a></li>
     {% endif %}
 
   </ul>
