--- a/pplatform/static/css/project.css
+++ b/pplatform/static/css/project.css
@@ -21,3 +21,25 @@ a:hover {
   text-decoration: none;
   color: black;
 }
+
+.nav-link {
+  padding: 0.5rem 0.5rem 0 0.5rem;
+}
+
+.accordion-button:not(.collapsed) {
+  color: #212529;
+  background-color: #ffffff;
+  box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
+}
+
+/* .accordion-button {
+  color: #ffffff;
+  background-color: #212529;
+} */
+
+.accordion-button:focus {
+  z-index: 3;
+  border-color: #ffffff;
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.25);
+}
