--- a/pplatform/templates/navbar.html
+++ b/pplatform/templates/navbar.html
@@ -61,6 +61,9 @@
         <li class="nav-item">
           <a id="log-in-link" class="nav-link" href="{% url 'catalog:product-list-htmx' %}">Manage HTMX</a>
         </li>
+        <li class="nav-item">
+          <a id="log-in-link" class="nav-link" href="{% url 'catalog:selection-list-htmx' %}">Selection-HTMX</a>
+        </li>
       </ul>
 
     </div>
