--- a/pplatform/templates/navbar.html
+++ b/pplatform/templates/navbar.html
@@ -56,13 +56,13 @@
 
         </li>
         <li class="nav-item">
-          <a id="log-in-link" class="nav-link" href="{% url 'catalog:manage_product_list' %}">Manage</a>
+          <a class="nav-link" href="{% url 'catalog:manage_product_list' %}">Manage</a>
         </li>
         <li class="nav-item">
-          <a id="log-in-link" class="nav-link" href="{% url 'catalog:product-list-htmx' %}">Manage HTMX</a>
+          <a class="nav-link" href="{% url 'catalog:product-list-htmx' %}">Manage HTMX</a>
         </li>
         <li class="nav-item">
-          <a id="log-in-link" class="nav-link" href="{% url 'catalog:selection-list-htmx' %}">Selection-HTMX</a>
+          <a class="nav-link" href="{% url 'catalog:selection-list-htmx' %}">Selection-HTMX</a>
         </li>
       </ul>
 
