--- a/pplatform/templates/catalog/product/list.html
+++ b/pplatform/templates/catalog/product/list.html
@@ -37,6 +37,7 @@ Products
       {% endif %}
     </h2>
     <br>
+    <div id="selection-counter"></div>
     <!-- PRODUCT CARDS SECTION -->
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
       {% for product in products %}
