got messy but working add button without page-reload

--- a/pplatform/templates/navbar.html
+++ b/pplatform/templates/navbar.html
@@ -56,6 +56,9 @@
 
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{% url 'catalog:catalog-htmx' %}">Catalog HTMX</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{% url 'catalog:manage_product_list' %}">Manage</a>
         </li>
         <li class="nav-item">
