--- a/pplatform/templates/catalog/product/htmx/products_htmx.html
+++ b/pplatform/templates/catalog/product/htmx/products_htmx.html
@@ -3,13 +3,13 @@
 {% block content %}
 <div class="align-center col-10 offset-1">
   <div class="d-flex justify-content-between">
-    <p class="lead ml-0">My Selection</p>
+    <p class="lead ml-0">Catalog</p>
   </div>
   <hr>
   <br>
 
-  <div id="selection-product-list">
-    {% include 'catalog/product/htmx/partials/product-list.html' %}
+  <div id="product-list-htmx">
+    {% include 'catalog/product/htmx/partials/htmx-product-list.html' %}
   </div>
 
 </div>
