--- a/pplatform/templates/catalog/product/htmx/partials/htmx-product-list.html
+++ b/pplatform/templates/catalog/product/htmx/partials/htmx-product-list.html
@@ -1,4 +1,4 @@
-<ul class="list-group col-12" id="product-item-btn">
+<ul class="list-group col-12" id="htmx-product-list">
   {% for product in products %}
   <li class="list-group-item d-flex justify-content-between align-items-center">
     {{ product.name }}
