search auto show

--- a/pplatform/templates/catalog/product/htmx/partials/htmx-product-item-button.html
+++ b/pplatform/templates/catalog/product/htmx/partials/htmx-product-item-button.html
@@ -4,7 +4,9 @@
     style="cursor: pointer;"
     hx-delete="{% url 'catalog:delete-product-from-selection-counter' product.pk %}"
     hx-target="#htmx-product-list"
-    hx-confirm="Are you sure you want to delete?">X</span>
+    >X</span>
+    <!-- ADD THIS FOR SECURITY IN THE SPAN BEFORE -->
+    <!-- hx-confirm="Are you sure you want to delete?" -->
 
   {% else %}
   <!-- ADD -->
