--- a/pplatform/templates/catalog/product/htmx/partials/product-list.html
+++ b/pplatform/templates/catalog/product/htmx/partials/product-list.html
@@ -24,7 +24,9 @@
           style="cursor: pointer;"
           hx-delete="{% url 'catalog:delete-product-from-selection' product.pk %}"
           hx-target="#selection-product-list"
-          hx-confirm="Are you sure you want to delete?">X</span>
+          >X</span>
+          <!-- ADD THIS FOR SECURITY IN THE SPAN BEFORE -->
+          <!-- hx-confirm="Are you sure you want to delete?" -->
 
       </li>
       {% endfor %}
