--- a/pplatform/templates/catalog/product/htmx/products_htmx.html
+++ b/pplatform/templates/catalog/product/htmx/products_htmx.html
@@ -7,7 +7,10 @@
   </div>
   <hr>
   <br>
-
+  <div>
+    {% include 'catalog/product/htmx/partials/catalog-search.html' %}
+  </div>
+  <br>
   <div id="product-list-htmx">
     {% include 'catalog/product/htmx/partials/htmx-product-list.html' %}
   </div>
